package message;

enum PlatformError
{
	PlatformError_NO = 0;
	PlatformError_Unknow = 1;
	PlatformError_AlreadyRegister = 2;

}
message MsgS2PRegisterServer
{
	required int32 server_id = 1;
	required int32 game_id = 2;
	required int32 server_type = 3;
}

message MsgP2SRegisterACK
{
	required PlatformError error = 1[default=PlatformError_NO];
	required string describe = 2;
}

message MsgP2SClinchADealNotify
{
	required int32 status = 1;
	required string	product_id = 2;
	required int32 order_id = 3;
	required uint64 user_id = 4;

}
